bk_ida/gccida/c0/make_tree
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4509:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4510:5: error: expected ';' after expression
tree v4; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4510:6: error: use of undeclared identifier 'v4'
tree v4; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4511:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4512:5: error: expected ';' after expression
tree v6; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4512:6: error: use of undeclared identifier 'v6'
tree v6; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4513:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4514:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4516:5: error: expected ';' after expression
tree v10; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4516:6: error: use of undeclared identifier 'v10'
tree v10; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4517:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4518:5: error: expected ';' after expression
tree v12; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4518:6: error: use of undeclared identifier 'v12'
tree v12; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4519:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4521:5: error: expected ';' after expression
tree v15; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4521:6: error: use of undeclared identifier 'v15'
tree v15; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/expmed.c:4522:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_tree/src/obj/expmed.o] Error 1
